ACTUAL fixed version of stock casting for no error